type checking tweaks

--- a/app/.vscode/settings.json
+++ b/app/.vscode/settings.json
@@ -10,5 +10,6 @@
             "source.organizeImports": true
         }
     },
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "typescript.tsserver.experimental.enableProjectDiagnostics": true
 }
