--- a/app/babel.config.json
+++ b/app/babel.config.json
@@ -15,7 +15,7 @@
     ],
     "plugins": [
         "@babel/plugin-proposal-numeric-separator",
-        ["@babel/plugin-proposal-class-properties"],
+        "@babel/plugin-proposal-class-properties",
         "react-hot-loader/babel"
     ]
 }
