upgrade typescript, fix baffling type errors with explicit redux deps

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.1.2",
         "react-slider": "^1.0.3",
+        "redux": "^4.1.2",
+        "redux-thunk": "^2.4.0",
         "sanitize.css": "^12.0.1",
         "sqlstring": "^2.3.2",
         "tough-cookie": "^2.5.0",
@@ -91,7 +93,7 @@
         "react-svg-loader": "^3.0.3",
         "testcontainers": "^3.2.0",
         "ts-node-dev": "^1.0.0-pre.44",
-        "typescript": "~4.1.5",
+        "typescript": "~4.5.2",
         "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.10.1",
