--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,4 @@
-name: CI
-
-on:
-    push:
-        branches: [master]
-    pull_request:
-        branches: [master]
+on: [push, pull_request]
 
 jobs:
     build:
@@ -22,3 +16,23 @@ jobs:
             - run: yarn test
             - run: yarn run lint
             - run: yarn run format:check
+
+    deploy:
+        needs: build
+        if: github.event_name == 'push' && github.ref == 'refs/heads/deployment'
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2.3.2
+              with:
+                  token: ${{secrets.ROBEADY_GITHUB_PAT}}
+                  submodules: recursive
+            - uses: actions/setup-node@v1
+              with:
+                  node-version: "14"
+            - run: yarn install --frozen-lockfile --prod
+            - run: yarn run compile
+            - env:
+                  USER: ${{secrets.DEPLOY_USER}}
+                  TOKEN: ${{secrets.DEPLOY_TOKEN}}
+                  HOST: ${{secrets.DEPLOY_HOST}}
+              run: scripts/deploy.sh
