--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "electron:build:FORGOT_WHAT_THIS_DOES": "cross-env NODE_ENV=development webpack",
-        "frontend:serve-hot": "cross-env NODE_ENV=development webpack-dev-server --hot --port 8180",
-        "electron:start": "cross-env NODE_ENV=development electron src/main.js",
+        "start": "concurrently -k \"yarn:backend:start\" \"yarn:frontend:start\"",
+        "frontend:start": "cross-env NODE_ENV=development webpack-dev-server --hot --port 8180",
         "backend:start": "ts-node-dev --type-check --no-notify src/backend/index.ts",
         "test": "jest",
-        "lint": "eslint \"src/**/*.{ts,tsx}\"",
+        "compile": "tsc",
+        "typecheck": "tsc --noEmit",
+        "lint": "eslint --fix \"src/**/*.{ts,tsx}\"",
+        "lint:check": "eslint \"src/**/*.{ts,tsx}\"",
         "format": "prettier --write --ignore-path .gitignore \"**/*.{js,ts,tsx,json}\"",
         "format:check": "prettier --check --ignore-path .gitignore \"**/*.{js,ts,tsx,json}\"",
-        "typecheck": "tsc --noEmit",
-        "start": "concurrently -k \"yarn:backend:start\" \"yarn:frontend:serve-hot\"",
-        "frontend:build": "cross-env NODE_ENV=production webpack"
+        "frontend:build": "cross-env NODE_ENV=production webpack",
+        "electron:start": "cross-env NODE_ENV=development electron src/main.js",
+        "electron:build:FORGOT_WHAT_THIS_DOES": "cross-env NODE_ENV=development webpack"
     },
     "dependencies": {
         "@popperjs/core": "^2.9.2",
@@ -69,6 +71,7 @@
         "@types/react-slider": "^1.0.0",
         "@types/tough-cookie": "^2.3.6",
         "@types/uuid": "^8.3.0",
+        "@types/webpack": "^5.28.0",
         "@typescript-eslint/eslint-plugin": "^4.25.0",
         "@typescript-eslint/parser": "^4.25.0",
         "babel-jest": "^25.1.0",
