--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
             - run: yarn install --frozen-lockfile
             - run: yarn run typecheck
             - run: yarn test
-            - run: yarn run lint
+            - run: yarn run lint:check
             - run: yarn run format:check
 
     deploy:
