--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "license": "MIT",
     "scripts": {
         "start": "concurrently -k \"yarn:backend:start\" \"yarn:frontend:start\"",
-        "frontend:start": "cross-env NODE_ENV=development webpack-dev-server --hot --port 8180",
-        "backend:start": "ts-node-dev --type-check --no-notify src/backend/index.ts",
+        "frontend:start": "cross-env YP_PORT=8280 NODE_ENV=development webpack-dev-server --hot --port 8180",
+        "backend:start": "cross-env YP_PORT=8280 YP_DB_USER=yamplayer_user YP_DB_PASSWORD=hunter2 ts-node-dev --type-check --no-notify src/backend/index.ts",
         "test": "jest",
         "compile": "tsc",
         "typecheck": "tsc --noEmit",
