--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,4 @@
-name: CI
-
-on:
-    push:
-        branches: [master]
-    pull_request:
-        branches: [master]
+on: push
 
 jobs:
     build:
@@ -18,7 +12,13 @@ jobs:
               with:
                   node-version: "14"
             - run: yarn install --frozen-lockfile
-            - run: yarn run typecheck
+            - run: yarn run compile
             - run: yarn test
-            - run: yarn run lint
+            - run: yarn run lint:check
             - run: yarn run format:check
+            - if: github.ref == 'refs/heads/master'
+              env:
+                  USER: ${{secrets.DEPLOY_USER}}
+                  TOKEN: ${{secrets.DEPLOY_TOKEN}}
+                  HOST: ${{secrets.DEPLOY_HOST}}
+              run: scripts/deploy.sh
