--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.0",
         "sanitize.css": "^12.0.1",
+        "source-map-support": "^0.5.21",
         "sqlstring": "^2.3.2",
         "tough-cookie": "^2.5.0",
         "ts-custom-error": "^3.2.0",
