--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "start": "concurrently -k \"yarn:backend:start\" \"yarn:frontend:start\"",
-        "frontend:start": "cross-env YP_PORT=8280 NODE_ENV=development webpack-dev-server --hot --port 8180",
-        "backend:start": "cross-env YP_PORT=8280 YP_DB_USER=yamplayer_user YP_DB_PASSWORD=hunter2 ts-node-dev --type-check --no-notify src/backend/index.ts",
+        "start": "concurrently -k \"yarn:backend\" \"yarn:frontend\"",
+        "frontend": "cross-env YP_PORT=8280 NODE_ENV=development webpack-dev-server --hot --port 8180",
+        "backend": "cross-env YP_PORT=8280 YP_DB_USER=yamplayer_user YP_DB_PASSWORD=hunter2 ts-node-dev --type-check --no-notify src/backend/index.ts",
         "test": "jest",
         "compile": "tsc",
         "typecheck": "tsc --noEmit",
@@ -51,7 +51,8 @@
         "tough-cookie": "^2.5.0",
         "ts-custom-error": "^3.2.0",
         "use-context-selector": "1.1.1",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
