--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unicorn": "^32.0.1",
         "fork-ts-checker-webpack-plugin": "^1.5.0",
+        "html-webpack-plugin": "4",
+        "inject-body-webpack-plugin": "^1.3.0",
         "jest": "^25.1.0",
         "jest-silent-reporter": "^0.2.1",
         "mini-css-extract-plugin": "^0.9.0",
