attempt to deploy frontend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "./dist",
+        "outDir": "./dist/node",
         "sourceMap": true,
         "module": "commonjs",
         "target": "ES2019",
