--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,5 @@
 {
     "testEnvironment": "node",
-    "setupFiles": ["<rootDir>/jest.setup.js"]
+    "setupFiles": ["<rootDir>/jest.setup.js"],
+    "roots": ["src"]
 }
