refactor audio player queuing and implement skip back

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -72,7 +72,7 @@
         "no-continue": "off",
         "no-param-reassign": "off",
         "no-eq-null": "off",
-        "eqeqeq": ["error", { "null": "ignore" }]
+        "eqeqeq": ["error", "always", { "null": "ignore" }],
 
         // === disabling ts rules ===
         "@typescript-eslint/explicit-function-return-type": "off",
