--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -109,6 +109,10 @@
         "@typescript-eslint/member-ordering": "off",
         "@typescript-eslint/no-implicit-any-catch": ["error", { "allowExplicitAny": true }],
         "@typescript-eslint/init-declarations": "off",
+        "@typescript-eslint/strict-boolean-expressions": [
+            "error",
+            { "allowAny": true, "allowNullableBoolean": true }
+        ],
         "@typescript-eslint/no-unused-vars": [
             "warn",
             { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
