--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -117,6 +117,7 @@
             "warn",
             { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
         ],
+        "@typescript-eslint/no-dynamic-delete": "off",
 
         // === disabling react rules ===
         "react/prop-types": "off",
