--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
         "lodash": "^4.17.15",
         "mariadb": "^2.3.1",
         "plist": "^3.0.1",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-hot-loader": "^4.12.19",
         "react-icons": "^4.2.0",
         "react-popper": "^2.2.5",
@@ -62,14 +62,14 @@
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
-        "@hot-loader/react-dom": "^16.11.0",
+        "@hot-loader/react-dom": "^17.0.2",
         "@types/express": "^4.17.2",
         "@types/howler": "^2.1.2",
         "@types/jest": "^25.1.1",
         "@types/lodash": "^4.14.108",
-        "@types/react": "^16.9.19",
-        "@types/react-dom": "^16.9.5",
-        "@types/react-redux": "^7.1.18",
+        "@types/react": "^17.0.45",
+        "@types/react-dom": "^17.0.16",
+        "@types/react-redux": "^7.1.24",
         "@types/react-router-dom": "^5.1.5",
         "@types/react-slider": "^1.0.0",
         "@types/tough-cookie": "^2.3.6",
@@ -106,5 +106,8 @@
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.10.1",
         "webpack-merge": "^4.2.2"
+    },
+    "resolutions": {
+        "@types/react": "17.0.45"
     }
 }
