--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -111,7 +111,12 @@
         "@typescript-eslint/init-declarations": "off",
         "@typescript-eslint/strict-boolean-expressions": [
             "error",
-            { "allowAny": true, "allowNullableBoolean": true }
+            {
+                "allowAny": true,
+                "allowNullableBoolean": true,
+                "allowString": true,
+                "allowNullableString": true
+            }
         ],
         "@typescript-eslint/no-unused-vars": [
             "warn",
