--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -109,15 +109,7 @@
         "@typescript-eslint/member-ordering": "off",
         "@typescript-eslint/no-implicit-any-catch": ["error", { "allowExplicitAny": true }],
         "@typescript-eslint/init-declarations": "off",
-        "@typescript-eslint/strict-boolean-expressions": [
-            "error",
-            {
-                "allowAny": true,
-                "allowNullableBoolean": true,
-                "allowString": true,
-                "allowNullableString": true
-            }
-        ],
+        "@typescript-eslint/strict-boolean-expressions": "off",
         "@typescript-eslint/no-unused-vars": [
             "warn",
             { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
