--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "lodash": "^4.17.15",
         "mariadb": "^2.3.1",
         "plist": "^3.0.1",
+        "polished": "4.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-loader": "^4.12.19",
@@ -64,6 +65,7 @@
         "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.12.10",
         "@babel/preset-typescript": "^7.12.7",
+        "@babel/runtime": "7.13.10",
         "@hot-loader/react-dom": "^17.0.2",
         "@types/express": "^4.17.2",
         "@types/howler": "^2.1.2",
